# llpe

./: CNAME  LICENCE.txt  Makefile  Makefile.common  README.md  _config.yml  alias.ll  argvspec.md  build.md  commandline.md  conditionalspec.md  cstringify.py  devdocs-conditional.md  devdocs-dse.md  devdocs-gui.md  devdocs-memory.md  devdocs-overview.md  devdocs-save.md  devdocs-tl.md  devdocs-vfs.md  docs.md  dragonegg.diff  fake_fd_table.c  fake_fd_table.cpp  fake_fd_table.h  filespec.md  index.md  match.h  specpaths.md  support.md  tutorial.md  uncondspec.md  wrappers.c
_includes/: footer.html  head.html  navigation.html
buildenv-guide/: README  __uClibc_main.c  crt1time.S  crtspec.S  crtspectime.S  dragonegg.diff  uclibc-build-notes  uclibc-compile
eval/: date-build.sh  date-opt  date-opt-build.sh  date-prep.sh  date-spec.sh  md5sum-build.sh  md5sum-hacked.bc  md5sum-opt  md5sum-opt-build.sh  md5sum-prep.sh  md5sum-spec.sh  printf-build.sh  printf-hacked.bc  printf-opt  printf-opt-build.sh  printf-prep.sh  printf-spec.sh  specmf  time.py  timeprogram.c  xml-spec.sh  xml-specmf
lliowd/: Makefile  clientlib.c  lliowd.h  main.cpp  testlib.c
llpe/: CMakeLists.txt
llpe/driver/: CMakeLists.txt  Integrator.cpp
llpe/include/: ShadowInlines.h
llpe/include/llvm/Analysis/: HypotheticalConstantFolder.h  LLPE.h  LLPECopyPaste.h  ShadowInlines.h  SharedTree.h
llpe/main/: ArgSpec.cpp  Args.cpp  BytewiseReinterpret.cpp  CFGEval.cpp  CMakeLists.txt  CommandLine.cpp  ConditionalSpec.cpp  CopyPaste.cpp  CreateSpecialisationContext.cpp  DIE.cpp  DOT.cpp  DSE.cpp  DriverInterface.cpp  DumpType.cpp  Eval.cpp  FunctionSharing.cpp  HypotheticalConstantFolder.cpp  IAWalkers.cpp  IntBenefit.cpp  IntConstFold.cpp  IntegratorShared.cpp  LLIO.cpp  LoadForward.cpp  LoopPeelHeuristics.cpp  MainLoop.cpp  Misc.cpp  NewStats.cpp  PartialLoadForward.cpp  PostCommit.cpp  Print.cpp  Save.cpp  SaveSplit.cpp  Selective.cpp  Shadows.cpp  TLDump.cpp  TentativeLoads.cpp  TopLevel.cpp  VFSCallModRef.cpp  VFSOps.cpp
llpe/utils/: CMakeLists.txt  DumpType.cpp  NameBlocks.cpp
(+305 files in other folders)
