
add_library(LLVMLLPEMain MODULE Args.cpp FunctionSharing.cpp MainLoop.cpp Shadows.cpp CFGEval.cpp HypotheticalConstantFolder.cpp NewStats.cpp TentativeLoads.cpp ConditionalSpec.cpp IAWalkers.cpp PartialLoadForward.cpp TLDump.cpp CopyPaste.cpp IntBenefit.cpp PostCommit.cpp VFSCallModRef.cpp DIE.cpp IntConstFold.cpp Print.cpp VFSOps.cpp DOT.cpp IntegratorShared.cpp Save.cpp DSE.cpp LoadForward.cpp SaveSplit.cpp DumpType.cpp LoopPeelHeuristics.cpp Selective.cpp)

